[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = "1.38.0"
axum = { version = "0.7.4", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.1"
clap = "4.5.7"
csv = "1.3.0"
ed25519-dalek = "2.1.1"
enum_dispatch = "0.3.13"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zxcvbn = "3.0.1"
